--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             <section id="introducao" class="section">
                 <h2>Introdução</h2>
                 <div class="image-placeholder">
-                    <img src="/portifolio_soc-tec/shawn-pIx2wqVhYRU-unsplash.jpg" alt="Representação da interação entre tecnologia e sociedade" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+                    <img src="train.jpg" alt="Representação da interação entre tecnologia e sociedade" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
                 </div>
                 <p>Este portfólio apresenta minhas reflexões e aprendizados ao longo do semestre na disciplina de Sociedade e Tecnologia ministrada pelo professor Thiago Fescina, onde exploramos as complexas relações entre o desenvolvimento tecnológico e as transformações socioculturais contemporâneas. Através do estudo de autores como Lucia Santaella, Pierre Lévy e Zygmunt Bauman, pude desenvolver uma visão crítica e simultaneamente compreensiva sobre os impactos da tecnologia na sociedade atual.</p>
             </section>
@@ -284,7 +284,7 @@
             <section id="conceitos" class="section">
                 <h2>1. Conceitos Fundamentais: Informação e Comunicação</h2>
                 <div class="image-placeholder">
-                    <img src="/portifolio_soc-tec/denny-muller-JyRTi3LoQnc-unsplash.jpg" alt="Visualização do fluxo de informação na era digital" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+                    <img src="fiber.jpg" alt="Visualização do fluxo de informação na era digital" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
                 </div>
                 <p>O ponto de partida de nossa jornada foi compreender a natureza da informação como "um conjunto de dados organizados e contextualizados que possuem significado e valor para quem os recebe". Esta definição, aparentemente simples, revelou-se fundamental para entender as transformações que vivenciamos.</p>
                 <div class="reflection-box">
@@ -297,7 +297,7 @@
             <section id="santaella" class="section">
                 <h2>2. Lucia Santaella: Pós-Modernidade e Pós-Humanismo</h2>
                 <div class="image-placeholder">
-                    <img src="/portifolio_soc-tec/santaella.jpg" alt="Lucia Santaella - teórica da comunicação e semiótica" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+                    <img src="santaella.jpg" alt="Lucia Santaella - teórica da comunicação e semiótica" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
                 </div>
                 <p>O trabalho de Lucia Santaella sobre a transição da cultura das mídias para a cibercultura ofereceu insights profundos sobre o "advento do pós-humano". Sua análise de 2003 permanece relevante para compreendermos as transformações contemporâneas.</p>
                 <h3>Principais Aprendizados</h3>
@@ -319,7 +319,7 @@
             <section id="levy" class="section">
                 <h2>3. Pierre Lévy: Cibercultura e Inteligência Coletiva</h2>
                 <div class="image-placeholder">
-                    <img src="/portifolio_soc-tec/TJTKLMJCDVDUVEQFTIF55MWXEU.jpeg" alt="Pierre Lévy - filósofo da cibercultura" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+                    <img src="pierre.jpeg" alt="Pierre Lévy - filósofo da cibercultura" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
                 </div>
                 <p>O estudo de Pierre Lévy apresentou uma visão otimista sobre a tecnologia como ferramenta de democratização do conhecimento e estabelecimento da inteligência coletiva.</p>
                 <h3>Conceitos Centrais</h3>
@@ -342,7 +342,7 @@
             <section id="bauman" class="section">
                 <h2>4. Zygmunt Bauman: Modernidade Líquida</h2>
                 <div class="image-placeholder">
-                    <img src="/portifolio_soc-tec/000_JR7JX-e1484001088720-640x400.jpeg" alt="Zygmunt Bauman - sociólogo da modernidade líquida" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;"> 
+                    <img src="bauman.jpeg" alt="Zygmunt Bauman - sociólogo da modernidade líquida" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;"> 
                 </div>
                 <p>O conceito de "modernidade líquida" de Bauman ofereceu uma lente crítica para compreendermos as transformações sociais contemporâneas.</p>
                 <h3>Compreensão do Conceito</h3>
@@ -356,7 +356,7 @@
             <section id="ia" class="section">
                 <h2>5. Inteligência Artificial: Reflexões Contemporâneas</h2>
                 <div class="image-placeholder">
-                    <img src="/portifolio_soc-tec/alex-knight-2EJCSULRwC8-unsplash.jpg" alt="Representação visual da inteligência artificial" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+                    <img src="robot.jpg" alt="Representação visual da inteligência artificial" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
                 </div>
                 <p>O estudo das IAs proporcionou reflexões sobre o futuro da relação humano-máquina e suas implicações sociais.</p>
                 <h3>Questões Emergentes</h3>
@@ -370,7 +370,7 @@
             <section id="sintese" class="section">
                 <h2>6. Síntese: Culturas e Artes do Pós-Moderno</h2>
                 <div class="image-placeholder">
-                    <img src="/portifolio_soc-tec/glenn-carstens-peters-1F4MukO0UNg-unsplash.jpg" alt="Representação das artes pós-modernas" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+                    <img src="oldnew.jpg" alt="Representação das artes pós-modernas" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
                 </div>
                 <p>O retorno aos trabalhos de Santaella sobre culturas e artes pós-modernas encerrou nosso ciclo de estudos, oferecendo uma perspectiva integrada sobre as transformações culturais contemporâneas.</p>
             </section>
