--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <section id="levy" class="section">
                 <h2>3. Pierre Lévy: Cibercultura e Inteligência Coletiva</h2>
                 <div class="image-placeholder">
-                    <img src="pierre.jpeg" alt="Pierre Lévy - filósofo da cibercultura" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+                    <img src="pierre.jpg" alt="Pierre Lévy - filósofo da cibercultura" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
                 </div>
                 <p>O estudo de Pierre Lévy apresentou uma visão otimista sobre a tecnologia como ferramenta de democratização do conhecimento e estabelecimento da inteligência coletiva.</p>
                 <h3>Conceitos Centrais</h3>
@@ -342,7 +342,7 @@
             <section id="bauman" class="section">
                 <h2>4. Zygmunt Bauman: Modernidade Líquida</h2>
                 <div class="image-placeholder">
-                    <img src="bauman.jpeg" alt="Zygmunt Bauman - sociólogo da modernidade líquida" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;"> 
+                    <img src="bauman.jpg" alt="Zygmunt Bauman - sociólogo da modernidade líquida" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;"> 
                 </div>
                 <p>O conceito de "modernidade líquida" de Bauman ofereceu uma lente crítica para compreendermos as transformações sociais contemporâneas.</p>
                 <h3>Compreensão do Conceito</h3>
